@@ -1,3 +1,12 @@
+2005-11-18  Vincent Noel  <vincent.noel@gmail.com>
+
+	* logview.c: (logview_set_window_title), (window_size_changed_cb),
+	(logview_window_finalize), (logview_init), (logview_window_new):
+	* main.c: (main):
+	* userprefs.c: (prefs_load): Rename a few variables for consistency.
+
+	* main.c (main): Better handle errors.
+	
 2005-11-18  Vincent Noel <vincent.noel@gmail.com>
 
 	* logview.schemas.in: Updated the schemas to include new keys,
